changed names of inputs so they are not the same as actual variables

--- a/FC_ApplicationProblem.ipynb
+++ b/FC_ApplicationProblem.ipynb
@@ -24,10 +24,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def text_to_dict(text):\n",
+    "def text_to_dict(intext):\n",
     "    '''returns a dictionary with characters as keys and their counts as values'''\n",
     "    d = {}\n",
-    "    for c in text:\n",
+    "    for c in intext:\n",
     "        if c in d:\n",
     "            d[c] += 1\n",
     "        else:\n",
@@ -93,7 +93,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def sort_by_count(sorted_by_count, to_sort):\n",
+    "def sort_by_count(sorted_by_count, str_to_sort):\n",
     "    '''returns a sorted string of the entire to_sort string'''\n",
     "    init_result = ''\n",
     "    for i in sorted_by_count:\n",
